--- a/MongoDB-Security/index.html
+++ b/MongoDB-Security/index.html
@@ -141,12 +141,15 @@ security: authorization: &#39;enabled&#39;  X.509
     <div class="content">
       
       <div class="sm"><article class="li">
-  <a href="https://tao12345666333.github.io/note/Git-start/" class="clearfix">
+  <a href="https://tao12345666333.github.io/note/Git-Start/" class="clearfix">
     <div class="image" style="background-image: url(https://tao12345666333.github.io/note/images/default.jpg);"></div>
     <div class="detail">
       <time>Wed, Mar 1, 2017</time>
-      <h2 class="title">Git start</h2>
-      <div class="summary"> Git Start Introduce Setup and Config Repo Methods Branch and Merge Data transfer Compare </div>
+      <h2 class="title">Git Start</h2>
+      <div class="summary"> Git Start Introduction 分布式版本管理工具
+Setup and Config git config --global user.name 'TaoBeier' git config --global user.email 'zhangjintao9020@gmail.com'  Repo Create one local repo
+git init  Create bare repo
+git init --bare  Methods git add git commit -m 'msg' git checkout ...  Branch and Merge git branch git merge  Data transfer git remote git push git pull git fetch  Compare git log git diff  </div>
     </div>
   </a>
 </article>
