--- a/Redis-Protocol/index.html
+++ b/Redis-Protocol/index.html
@@ -81,7 +81,7 @@
 
 <h1 id="简介">简介</h1>
 
-<p>Redis 的客户端和服务端之间采取了一种独立名为 RESP(REdis Serialization Protocol) 的协议，作者主要考虑了以下几个点：</p>
+<p>Redis 的客户端和服务端之间采取了一种独立名为 RESP(REdis Serialization Protocol) 的<a href="https://redis.io/topics/protocol">协议</a>，作者主要考虑了以下几个点：</p>
 
 <ul>
 <li>容易实现</li>
