--- a/Redis-Protocol/index.html
+++ b/Redis-Protocol/index.html
@@ -81,7 +81,7 @@
 
 <h1 id="简介">简介</h1>
 
-<p>Redis 的客户端和服务端之间采取了一种独立名为 RESP(REdis Serialization Protocol) 的<a href="https://redis.io/topics/protocol">协议</a>，作者主要考虑了以下几个点：</p>
+<p>Redis 的客户端和服务端之间采取了一种独立名为 RESP(REdis Serialization Protocol) 的协议，作者主要考虑了以下几个点：</p>
 
 <ul>
 <li>容易实现</li>
@@ -239,6 +239,18 @@ $8\r\nTaoBeier\r\n
 <h1 id="总结">总结</h1>
 
 <p>RESP 协议还是相对易于理解的，另外理解了协议也方便对 Redis 一些问题的定位及客户端的实现。</p>
+
+<p>参考：</p>
+
+<ul>
+<li><a href="https://redis.io/topics/protocol">Redis Protocol specification</a></li>
+</ul>
+
+<hr />
+
+<p>可以通过下面二维码订阅我的文章公众号【MoeLove】</p>
+
+<p><img src="http://moelove.qiniudn.com/my_qrcode.jpg" alt="" /></p>
 
         </div>
 
